--- a/package.json
+++ b/package.json
@@ -23,8 +23,16 @@
   ],
   "dependencies": {
     "express": "^4.13.4",
-    "react": "^0.14.8",
-    "react-dom": "^0.14.8"
+    "axios": "^0.12.0",
+    "babel-preset-stage-1": "^6.1.18",
+    "lodash": "^3.10.1",
+    "react": "^0.14.3",
+    "react-dom": "^0.14.3",
+    "react-redux": "^4.0.0",
+    "react-router": "^2.0.0-rc5",
+    "redux": "^3.0.4",
+    "redux-form": "^4.1.3",
+    "redux-promise": "^0.5.3"
   },
   "devDependencies": {
     "babel": "^6.5.2",
